# RPA-workbench

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCUMENTATION_INDEX.md  LICENSE  README.md  install.sh  start.sh
backend/: .env.example  README.md  alembic.ini  pyproject.toml  pytest.ini  requirements.txt  rpa_app.db
backend/alembic/: env.py
backend/alembic/versions/: 6645182cb0e0_create_all_tables.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py  accounts.py  dashboard.py  logs.py  resources.py  sse.py  tasks.py  webhook.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  account.py  execution_log.py  task.py  user.py
backend/app/repositories/: __init__.py  account_repository.py  base.py  log_repository.py  task_repository.py
backend/app/schemas/: __init__.py  account.py  common.py  execution_log.py  task.py  user.py
backend/app/services/: __init__.py  account_service.py  dashboard_service.py  execution_log_service.py  sse_service.py  task_service.py
backend/app/static/configs/: 20260129_063646_店铺分类表.xlsx
backend/tests/: __init__.py  conftest.py  test_main.py
doc/: RPA_Workbench_Backend_PRD.md  TASKS_PROGRESS.md  TASK_CONTROL_MODIFICATION_PLAN.md  TEST_REPORT.md  WSL部署局域网访问配置.md  api-test-results.md  backend-milestone-fixes.md  new_api.md  oss_upload.py  rpa-workbench-design.md  screenshot_storage_design.md  status-design.md  test-backend-api.md  代码审查发现报告.md  仪表盘数据优化方案.md  仪表盘页面修改方案.md  分页排序交互问题分析.md  前后端连接问题排查.md  前端项目架构文档.md  后端项目架构文档.md  开源准备度检查报告.md  性能趋势无数据排查.md  (+6 more)
(+52 files in other folders)
